--- a/assets/style.css
+++ b/assets/style.css
@@ -31,7 +31,7 @@ div[data-testid="stVerticalBlock"] div:has(div.fixed-header) {
     text-align: left;
     padding: 10px;
     border-radius: 10px;
-    margin-bottom: 10px;
+    /* margin-bottom: 10px; */
     width: 70%;
     float: left;
     clear: both;
