--- a/assets/style.css
+++ b/assets/style.css
@@ -29,7 +29,7 @@ div[data-testid="stVerticalBlock"] div:has(div.fixed-header) {
 
 .assistant-message {
     text-align: left;
-    padding: 10px;
+    /* padding: 10px; */
     border-radius: 10px;
     /* margin-bottom: 10px; */
     width: 70%;
